--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "Fred Collman <fredcollman@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -18,5 +20,10 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^3.0.4"
+  },
+  "scripts": {
+    "start": "concurrently \"yarn run server\" \"yarn run client\"",
+    "client": "cd client && yarn start",
+    "server": "node server.js"
   }
 }
