--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Fred Collman <fredcollman@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "concurrently": "^5.3.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
@@ -24,6 +25,7 @@
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
     "client": "cd client && yarn start",
-    "server": "node server/main.js"
+    "server": "node server/main.js",
+    "lint": "eslint server/**/*.js"
   }
 }
