--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -21,12 +22,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
     "client": "cd client && yarn start",
     "server": "node server/main.js",
+    "dev:server": "nodemon --ignore db.json server/main.js",
     "lint": "eslint server/**/*.js"
   }
 }
