--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
@@ -27,6 +28,7 @@
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
     "client": "cd client && yarn start",
     "server": "node server/main.js",
+    "dev:server": "nodemon --watch server server/main.js",
     "lint": "eslint server/**/*.js"
   }
 }
