--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
-    "socket.io": "^3.0.4"
+    "socket.io": "^3.0.4",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "concurrently \"yarn run server\" \"yarn run client\"",
