--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "apollo-server-express": "^2.19.2",
     "express": "^4.17.1",
     "lowdb": "^1.0.0",
     "socket.io": "^3.0.4",
