--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "dependencies": {
     "apollo-server-express": "^2.19.2",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "lowdb": "^1.0.0",
-    "socket.io": "^3.0.4",
     "uuid": "^8.3.2"
   },
   "scripts": {
