--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-react": "^7.21.5",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "playwright": "^1.9.1",
     "prettier": "^2.2.1",
@@ -23,6 +24,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
+    "ts-jest": "^26.5.2",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
@@ -40,6 +42,7 @@
     "dev:server": "ts-node-dev --watch server server/main.ts",
     "lint": "eslint server/**/*.{js,ts}",
     "tsc": "tsc",
-    "test": "ts-node-dev e2e/demo.ts"
+    "test": "jest",
+    "test:example": "ts-node-dev e2e/demo.ts"
   }
 }
